# claude-conductor

./: .coveragerc  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  MONITORING.md  PR_TEMPLATE.md  QUICK_START.md  README.md  README.standalone.md  claude-code-handover.md  docker-compose.standalone.yml  pyproject.toml  pytest.ini  quick-start.sh  requirements.txt  setup.py  setup_project.sh  simple-setup.sh  test_dashboard.py
.github/workflows/: ci.yml  release.yml
conductor/: __init__.py  agent.py  checkpoint.py  coordination.py  enhanced_dashboard.py  enhanced_error_handling.py  error_handler.py  evaluator.py  exceptions.py  mcp_integration.py  metrics.py  metrics_service.py  monitored_agent.py  monitored_orchestrator.py  monitoring.py  orchestrator.py  performance_monitoring.py  protocol.py  py.typed  redis_backend.py  redis_orchestrator.py  secure_orchestrator.py  security.py  task_decomposer.py  thinking_mode.py  token_optimizer.py  utils.py  workspace_isolation.py
config/: config.yaml  standalone-isolated.yaml  standalone.yaml
containers/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  healthcheck.sh  install-claude-code.sh  nginx-standalone.conf  supervisor.conf
demo/: README.md  run-demo.sh
demo/collaborative-dev/: multi_agent_demo.py
demo/config/: demo-config.yaml
demo/pm-led-development/: README.md  pm_agent_demo.py  run-pm-demo.sh
demo/sample-project/: README.md  requirements.txt
demo/sample-project/src/: __init__.py
docs/: README.md  SECURITY.md  api_reference.md  architecture-comparison.md  architecture-diagrams.py  architecture-standalone.md  architecture.md  development-with-uv.md  generate_docs.py  getting-started.md  isolated-workspaces.md
docs/auto_generated/: agent.md  error_handler.md  exceptions.md  orchestrator.md  protocol.md  utils.md  workspace_isolation.md
examples/: README.md  advanced_configuration.py  basic_usage.py  example_usage.py  isolated_workspace_examples.py  monitoring_example.py  parallel_processing.py  sample_code.py  standalone_examples.py
k8s/: backup-and-disaster-recovery.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  pod-disruption-budget.yaml  pod-security-policy.yaml  pod-security-standards.yaml  priority-class.yaml  production-deployment.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml
scripts/: deploy.sh  setup.sh  start-isolated.sh  test.sh
src/: agent_communication.py  claude_code_wrapper.py  orchestrator.py
tests/: conftest.py  run_tests.sh  test_integration.py
tests/e2e/: test_end_to_end.py
tests/integration/: test_agent_communication.py  test_orchestrator_integration.py
tests/unit/: test_agent.py  test_orchestrator.py  test_protocol.py  test_utils.py
web/: README.md  dashboard.py
web/static/: dashboard.css  dashboard.js
web/templates/: dashboard.html
